--- a/remeal-backend/src/main/resources/application.properties
+++ b/remeal-backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=remeal-backend
-spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/remeal
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.maximum-pool-size=10
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
